implement basic switch among three activities, but the continuous message transfer still needs to fix

--- a/res/layout/activity_feedback.xml
+++ b/res/layout/activity_feedback.xml
@@ -3,5 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${packageName}.${activityClass}" >
+	
+    <Button
+            android:id="@+id/NextBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="147dp"
+            android:text="Next" />
 
+        <Button
+            android:id="@+id/startoverbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Start Over" />
+    
 </RelativeLayout>
